Review Controller and swagger integration
