# swagger-output.json
@@ -19,6 +19,10 @@
     {
       "name": "Movie",
       "description": "Movie-related APIs"
+    },
+    {
+      "name": "Review",
+      "description": "Therse Are related to the Review"
     }
   ],
   "schemes": [
@@ -600,9 +604,6 @@
     },
     "/movie/uploadMovie": {
       "post": {
-        "tags": [
-          "Movie"
-        ],
         "description": "",
         "parameters": [
           {
@@ -658,12 +659,20 @@
         }
       }
     },
-    "/movie/movieById": {
+    "/movie/movieById/{id}": {
       "get": {
         "tags": [
           "Movie"
         ],
         "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -674,11 +683,95 @@
         }
       }
     },
-    "/movie/addstreaming": {
-      "post": {
+    "/movie/editById/{id}": {
+      "put": {
         "tags": [
           "Movie"
         ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "castData": {
+                  "example": "any"
+                },
+                "crew": {
+                  "example": "any"
+                },
+                "gener": {
+                  "example": "any"
+                },
+                "language": {
+                  "example": "any"
+                },
+                "release_date": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "country": {
+                  "example": "any"
+                },
+                "year": {
+                  "example": "any"
+                },
+                "streaming": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/movie/deleteMovieById/{id}": {
+      "delete": {
+        "tags": [
+          "Movie"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/movie/addstreaming": {
+      "post": {
         "description": "",
         "parameters": [
           {
@@ -725,9 +818,6 @@
     },
     "/movie/editStreaming": {
       "put": {
-        "tags": [
-          "Movie"
-        ],
         "description": "",
         "parameters": [
           {
@@ -758,9 +848,6 @@
     },
     "/movie/addActors": {
       "post": {
-        "tags": [
-          "Movie"
-        ],
         "description": "",
         "parameters": [
           {
@@ -831,9 +918,6 @@
     },
     "/movie/editActor": {
       "put": {
-        "tags": [
-          "Movie"
-        ],
         "description": "",
         "parameters": [
           {
@@ -864,9 +948,6 @@
     },
     "/movie/addCrew": {
       "post": {
-        "tags": [
-          "Movie"
-        ],
         "description": "",
         "parameters": [
           {
@@ -912,6 +993,258 @@
                   "example": "any"
                 },
                 "charector_name": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/review/createReview": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "ratting": {
+                  "example": "any"
+                },
+                "textReview": {
+                  "example": "any"
+                },
+                "file_type": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "youtubeLink": {
+                  "example": "any"
+                },
+                "reviewerId": {
+                  "example": "any"
+                },
+                "movieId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/review/addWatchList": {
+      "post": {
+        "tags": [
+          "Review"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userId": {
+                  "example": "any"
+                },
+                "movieId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/review/follow": {
+      "post": {
+        "tags": [
+          "Review"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "follower_id": {
+                  "example": "any"
+                },
+                "following_id": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/review/followersList/{id}": {
+      "get": {
+        "tags": [
+          "Review"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/review/followingList/{id}": {
+      "get": {
+        "tags": [
+          "Review"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/review/like": {
+      "post": {
+        "tags": [
+          "Review"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "review_id": {
+                  "example": "any"
+                },
+                "reviewer_id": {
+                  "example": "any"
+                },
+                "user_id": {
+                  "example": "any"
+                },
+                "command_id": {
+                  "example": "any"
+                },
+                "commender_id": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/review/reportUser": {
+      "post": {
+        "tags": [
+          "Review"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "review_id": {
+                  "example": "any"
+                },
+                "repoter_id": {
+                  "example": "any"
+                },
+                "report_list_id": {
+                  "example": "any"
+                },
+                "reason": {
                   "example": "any"
                 }
               }
